# i3-switch-notification

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: PKGBUILD.in  check_git.cmake  cpack_config.cmake  cpack_pkgbuild.cmake  option.cmake
conf/: i3-switch-notification.conf
css/: style.css
src/: Constant.cpp  Constant.h  Consts.cpp  Consts.h  NotificationController.cpp  NotificationController.h  NotificationMainWindow.cpp  NotificationMainWindow.h  Settings.cpp  Settings.h  main.cpp
