
cmake_minimum_required(VERSION 3.1...3.15 FATAL_ERROR)
PROJECT(i3-switch-notification)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

# Set the project info
SET(PROJECT_AUTHOR "jialeENS")
SET(PROJECT_CONTACT "jialeadmin@163.com")
SET(PROJECT_LICENSE "MIT")

# Set the version
SET(PROJECT_VERSION_MAJOR "1")
SET(PROJECT_VERSION_MINOR "0")
SET(PROJECT_VERSION_PATCH "0")
SET(PROJECT_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
#SET(CMAKE_BUILD_TYPE Release)
SET(PROJECT_COMMIT_SHA "" CACHE INTERNAL "Commit hash")

INCLUDE("check_git")
MESSAGE("Commit hash: ${PROJECT_COMMIT_SHA}")

STRING(TIMESTAMP CURRENT_DATE "%Y-%m-%d %H:%M" UTC)
STRING(TIMESTAMP CURRENT_YEAR "%Y")

MESSAGE(STATUS "Project: ${PROJECT_NAME}")
MESSAGE(STATUS "Version: ${PROJECT_VERSION}")
MESSAGE(STATUS "Build date: ${CURRENT_DATE}")

# Set the install prefix
IF (NOT DEFINED CMAKE_INSTALL_PREFIX)
    SET(CMAKE_INSTALL_PREFIX "/usr/local")
ENDIF (NOT DEFINED CMAKE_INSTALL_PREFIX)
STRING(REGEX REPLACE "/$" "" CMAKE_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}")

INCLUDE(FindPkgConfig)

ADD_SUBDIRECTORY(i3ipc++)

PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)
INCLUDE_DIRECTORIES(
        ${I3IPCpp_INCLUDE_DIRS}
        ${GTK3_INCLUDE_DIRS}
        "src"
)

LINK_DIRECTORIES(
        ${I3IPCpp_LIBRARY_DIRS}
        ${GTK3_LIBRARY_DIRS})

SET(
        DIR_SRCS
        src/main.cpp
        src/NotificationMainWindow.cpp
        src/NotificationMainWindow.h
        src/NotificationController.cpp
        src/NotificationController.h
        src/Consts.cpp
        src/Consts.h
        src/Settings.cpp
        src/Settings.h
)


ADD_DEFINITIONS(
        ${GTK3_CFLAGS_OTHER}
)

ADD_EXECUTABLE(i3-switch-notification ${DIR_SRCS})

TARGET_LINK_LIBRARIES(i3-switch-notification ${I3IPCpp_LIBRARIES} ${GTK3_LDFLAGS})


FILE(INSTALL "${CMAKE_SOURCE_DIR}/css/style.css" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/share/${PROJECT_NAME}/css")
FILE(INSTALL "${CMAKE_SOURCE_DIR}/conf/i3-switch-notification.conf" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/share/${PROJECT_NAME}/conf")


INSTALL(
        TARGETS i3-switch-notification
        DESTINATION bin
        PERMISSIONS OWNER_EXECUTE OWNER_READ OWNER_WRITE
        PERMISSIONS GROUP_EXECUTE GROUP_READ GROUP_WRITE
        PERMISSIONS WORLD_EXECUTE WORLD_READ
)
INSTALL(
        FILES "css/style.css"
        DESTINATION share/${PROJECT_NAME}/css
        PERMISSIONS OWNER_READ OWNER_WRITE
        PERMISSIONS GROUP_READ GROUP_WRITE
        PERMISSIONS WORLD_READ
)
INSTALL(
        FILES "conf/i3-switch-notification.conf"
        DESTINATION share/${PROJECT_NAME}/conf
        PERMISSIONS OWNER_READ OWNER_WRITE
        PERMISSIONS GROUP_READ GROUP_WRITE
        PERMISSIONS WORLD_READ
)
# build a CPack driven installer package
INCLUDE(option)
INCLUDE(cpack_config)

